# pdval

./: .gitignore  LICENSE  README.md  basedpyright_output.txt  basedpyright_output_2.txt  basedpyright_output_3.txt  basedpyright_output_4.txt  pyproject.toml  reproduce_issue.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench_overhead.py  benchmark_decorator.py
cov_annotated/: z_1b666664e68f2ed9___init__.py,cover  z_1b666664e68f2ed9_validation.py,cover
src/pdval/: __init__.py  base.py  decorator.py  validation.py
src/pdval-pandera/: __init__.py
src/pdval/validators/: __init__.py  columns.py  comparison.py  gaps.py  index.py  markers.py  value.py
tests/: __init__.py  conftest.py  test_coverage_gaps.py  test_decorator.py  test_enhanced_validators.py  test_imports.py  test_new_validators.py  test_validators.py
tests/validators/: __init__.py  test_columns.py  test_comparison.py  test_gaps.py  test_index.py  test_value.py
