[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdval"
version = "0.1.7"
description = "Pandas validation using Annotated types and decorators"
authors = [{ name = "Sencer S.", email = "nospam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0", # Added for package building
    "twine>=4.0.0", # Added for package distribution checking and uploading
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdval*"]

[tool.setuptools.package-data]
pdval = ["py.typed"]


# ============================================================
# RUFF CONFIGURATION
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 2
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "ANN",    # flake8-annotations
]

ignore = [
    "E111",    # Indentation is not a multiple of 4
    "E114",    # Indentation is not a multiple of 4 (comment)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports
"tests/**/*.py" = [
  "ANN",   # Don't require annotations in tests
  "B006",  # Mutable defaults acceptable in tests
  "B008",  # Function calls in defaults acceptable in tests
]

[tool.ruff.lint.isort]
known-first-party = ["pdval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# BASEDPYRIGHT / PYRIGHT CONFIGURATION
# ============================================================
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
# Allow skip_validation parameter between *args and **kwargs
# This works at runtime but basedpyright is overly strict about ParamSpec
reportGeneralTypeIssues = "none"

# ============================================================
# PYTEST CONFIGURATION
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# ============================================================
# COVERAGE CONFIGURATION
# ============================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

